--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                                 <div class="col-lg-9 col-md-8">
                                     <div class="row align-items-end">
                                         <div class="col-md-12 text-md-start mt-4 mt-sm-0">
-                                            <h4 class="heading me-2">Eu Sou <span class="element text-primary"
+                                            <h4 class="heading me-2"><span class="element text-primary"
                                                     ></span>
                                                 <span id="" class="text-primary">Data Scientist</span>
                                             </h4>
@@ -172,8 +172,8 @@
                                                 código em soluções que tornam a vida das pessoas mais fácil.  
                                                 Utilizando as melhores tecnologias do mercado, 
                                                 adquiri as habilidades e conhecimentos necessários para fazer do seu projeto um sucesso.
-                                                 Sou muito apaixonado e dedicado ao meu trabalho e tudo o que se refere à tecnologia da informação e ciência da computação.</p>
-                                            <img src="images/signature.png" height="35" alt="" title="" style="">
+                                                 Sou muito apaixonado e dedicado ao meu trabalho e tudo o que se refere à tecnologia da informação e ciência dos dados.</p>
+                                            <img src="images/signature.png" height="35" alt="" title="">
                                         </div>
                                         <!--end col-->
                                     </div>
@@ -200,9 +200,11 @@
                 <div class="col-12 text-center">
                     <div class="container-title text-center mb-4 pb-2">
                         <div class="titles">
-                            <h2 class="title text-capitalize mb-4">Awesome Service</h2>
-                            <p class="pera-title para-desc-600 text-light-muted mb-0 mx-auto">Obviously I'm a Web
-                                Designer. Experienced with all stages of the development cycle for dynamic web projects.
+                            <h2 class="title text-capitalize mb-4">Detalhismo</h2>
+                            <p class="pera-title para-desc-600 text-light-muted mb-0 mx-auto">Obviamente sou apaixonado por dados. Tendo como objetivo a mineração, extração e tratamento
+                                dos dados. Me expecializei nas tecnologias mais utilizadas de ETL. Através de ferramentas de vários níveis consegui adquirir recursos que ajudam a empresa a garantir a assertividade 
+                                e confiabilidade nas informações obtidas.
+                                
                             </p>
                             <span></span>
                         </div>
