--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                 <div class="col-12 text-center">
                     <div class="container-title text-center mb-4 pb-2">
                         <div class="titles">
-                            <h2 class="title text-capitalize mb-4">Detalhismo</h2>
-                            <p class="pera-title para-desc-600 text-light-muted mb-0 mx-auto">Obviamente sou apaixonado por dados. Tendo como objetivo a mineração, extração e tratamento
+                            <h2 class="title text-capitalize mb-8">Data Scientist</h2>
+                            <p class="pera-title para-desc-800 text-light-muted mb-4 mx-auto">Obviamente sou apaixonado por dados. Tendo como objetivo a mineração, extração e tratamento
                                 dos dados. Me expecializei nas tecnologias mais utilizadas de ETL. Através de ferramentas de vários níveis consegui adquirir recursos que ajudam a empresa a garantir a assertividade 
                                 e confiabilidade nas informações obtidas.
                                 
@@ -227,16 +227,69 @@
                             </svg>
                         </div>
                         <div class="services-texts">
-                            <h3 class="title mb-3">Web Developmnet</h3>
-                            <p class="text-light-muted mb-4">With lots of unique blocks, you can easily build a page
-                                without coding.</p>
-                            <a href="javascript:void(0)" class="text-primary">Read more <i
-                                    class="mdi mdi-chevron-right"></i></a>
+                            <h3 class="title mb-3">Gerenciamento</h3>
+                            <p class="text-light-muted mb-4">Com grande now how em desenvolvimento de projetos, e demandas diretas de grandes parcerias</p>
+                            <a href="#" class="text-primary"></a>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                    <div class="feature-widget text-left rounded">
+                        <div class="services-icon text-primary mb-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-monitor fea icon-md">
+                                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                <line x1="8" y1="21" x2="16" y2="21"></line>
+                                <line x1="12" y1="17" x2="12" y2="21"></line>
+                            </svg>
+                        </div>
+                        <div class="services-texts">
+                            <h3 class="title mb-3">WorkForce</h3>
+                            <p class="text-light-muted mb-4">Após 9 anos de experiencia em grandes empresas, possuo a excelencia no que tratar em forças tarefas.</p>
+                            <a href="#" class="text-primary"></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                    <div class="feature-widget text-left rounded">
+                        <div class="services-icon text-primary mb-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-monitor fea icon-md">
+                                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                <line x1="8" y1="21" x2="16" y2="21"></line>
+                                <line x1="12" y1="17" x2="12" y2="21"></line>
+                            </svg>
+                        </div>
+                        <div class="services-texts">
+                            <h3 class="title mb-3">Sistemas Customizados</h3>
+                            <p class="text-light-muted mb-4">Sempre sendo versatil, não apenas trazendo ferramentas como resultados, mas também praticidade e versatilidade para os usuários.</p>
+                            <a href="#" class="text-primary"></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                    <div class="feature-widget text-left rounded">
+                        <div class="services-icon text-primary mb-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                stroke-linejoin="round" class="feather feather-monitor fea icon-md">
+                                <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                                <line x1="8" y1="21" x2="16" y2="21"></line>
+                                <line x1="12" y1="17" x2="12" y2="21"></line>
+                            </svg>
+                        </div>
+                        <div class="services-texts">
+                            <h3 class="title mb-3">MatPlot Lib</h3>
+                            <p class="text-light-muted mb-4">Quando se trata em plotagem de dados, com certeza amelhor biblioteca python.</p>
+                            <a href="#" class="text-primary"></a>
+                        </div>
+                    </div>
+                </div> -->
+
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                     <div class="feature-widget text-left rounded">
                         <div class="services-icon text-primary mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -248,16 +301,16 @@
                             </svg>
                         </div>
                         <div class="services-texts">
-                            <h3 class="title mb-3">Design &amp; Planning</h3>
+                            <h3 class="title mb-3">Design Patterns</h3>
                             <p class="text-light-muted mb-4">With lots of unique blocks, you can easily build a page
                                 without coding.</p>
                             <a href="javascript:void(0)" class="text-primary">Read more <i
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                     <div class="feature-widget text-left rounded">
                         <div class="services-icon text-primary mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -275,9 +328,9 @@
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                     <div class="feature-widget text-left rounded">
                         <div class="services-icon text-primary mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -296,9 +349,9 @@
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                     <div class="feature-widget text-left rounded">
                         <div class="services-icon text-primary mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -319,9 +372,9 @@
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
+                <!-- <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2">
                     <div class="feature-widget text-left rounded">
                         <div class="icon services-icon text-primary mb-3">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -340,7 +393,7 @@
                                     class="mdi mdi-chevron-right"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
             </div><!-- end row -->
         </div>
@@ -355,11 +408,10 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-4">
                     <div class="work-content mt-4">
-                        <h2 class="text-capitalize">Work Participation</h2>
-                        <p class="mb-0 text-light-muted">Obviously I'm a Web Designer. Experienced with all stages of
-                            the development cycle for dynamic web projects.</p>
-                        <a href="#" class="btn btn btn-primary rounded mt-4 pt-2">See More <i
-                                class="mdi mdi-chevron-right"></i></a>
+                        <h2 class="text-capitalize">Experiências</h2>
+                        <p class="mb-0 text-light-muted">Após anos de experiência, pude aprender com as melhores empresas e com excelentes profissionais do mercado.</p>
+                        <!-- <a href="#" class="btn btn btn-primary rounded mt-4 pt-2">See More <i
+                                class="mdi mdi-chevron-right"></i></a> -->
                     </div>
                 </div>
 
@@ -378,9 +430,9 @@
                                             <line x1="17.5" y1="15" x2="9" y2="15"></line>
                                         </svg>
                                     </div>
-                                    <h3 class="title mb-0">UX Designer</h3>
-                                    <small class="company">Vivo - Senior Designer</small>
-                                    <span class="badge skill-badge education-badge badge-light">2015 - 2018</span>
+                                    <h3 class="title mb-0">Técnico em eletrônia</h3>
+                                    <small class="company">Eeletrônica Potência</small>
+                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
                                     <p class="description text-light-muted mt-2">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
                                         tellus lorem, et condimentum
@@ -397,10 +449,29 @@
                                             <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
                                         </svg>
                                     </div>
-                                    <h3 class="title mb-0">Web Developer</h3>
-                                    <small class="company">Oppo - HR Manager</small>
+                                    <h3 class="title mb-0">Analista de Suporte Técnico Jr - DELL</h3>
+                                    <small class="company">Sitel do Brasil</small>
                                     <span class="badge skill-badge education-badge margin-50 badge-light">2012 -
                                         2015</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-navigation fea icon-md">
+                                            <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">Analista de BackOffice - DELL</h3>
+                                    <small class="company">Sitel do Brasil</small>
+                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
                                     <p class="description text-light-muted mt-2">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
                                         tellus lorem, et condimentum
@@ -422,9 +493,28 @@
                                             <line x1="12" y1="22.08" x2="12" y2="12"></line>
                                         </svg>
                                     </div>
-                                    <h3 class="title mb-0">Graphic Designer</h3>
-                                    <small class="company">Apple - Testor</small>
+                                    <h3 class="title mb-0">Learning Specialist - CCE & Lenovo</h3>
+                                    <small class="company">Sitel do Brasil</small>
                                     <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-navigation fea icon-md">
+                                            <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">Analista de BackOffice - DELL</h3>
+                                    <small class="company">Sitel do Brasil</small>
+                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
                                     <p class="description text-light-muted mt-2">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
                                         tellus lorem, et condimentum
