--- a/index.html
+++ b/index.html
@@ -512,8 +512,94 @@
                                             <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
                                         </svg>
                                     </div>
-                                    <h3 class="title mb-0">Analista de BackOffice - DELL</h3>
+                                    <h3 class="title mb-0">Learning Specialist - Philips Heath Care/Alpargatas</h3>
                                     <small class="company">Sitel do Brasil</small>
+                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-package fea icon-md">
+                                            <line x1="16.5" y1="9.4" x2="7.5" y2="4.21"></line>
+                                            <path
+                                                d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+                                            </path>
+                                            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                            <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">Quality/Process Specialist - Alpargatas</h3>
+                                    <small class="company">Sitel do Brasil</small>
+                                    <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-navigation fea icon-md">
+                                            <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">Learning Specialist</h3>
+                                    <small class="company">GM Promo</small>
+                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-package fea icon-md">
+                                            <line x1="16.5" y1="9.4" x2="7.5" y2="4.21"></line>
+                                            <path
+                                                d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z">
+                                            </path>
+                                            <polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline>
+                                            <line x1="12" y1="22.08" x2="12" y2="12"></line>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">PO - Product Owner</h3>
+                                    <small class="company">GM Promo/Desenvolver</small>
+                                    <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <p class="description text-light-muted mt-2">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
+                                        tellus lorem, et condimentum
+                                    </p>
+                                </a>
+                            </div>
+                            <div class="timeline mt-4">
+                                <a href="#" class="timeline-content">
+                                    <div class="timeline-icon text-primary">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                            viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            class="feather feather-navigation fea icon-md">
+                                            <polygon points="3 11 22 2 13 21 11 13 3 11"></polygon>
+                                        </svg>
+                                    </div>
+                                    <h3 class="title mb-0">Big Data</h3>
+                                    <small class="company">GM Promo</small>
                                     <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
                                     <p class="description text-light-muted mt-2">
                                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer males uada
@@ -535,8 +621,8 @@
                 <div class="col-lg-3 col-6 my-3">
                     <div class="card counter-box border-0 shadow text-center rounded py-3">
                         <div class="card-body py-5">
-                            <h2 class="mb-0"><span class="counter-value" data-target="97">97</span>%</h2>
-                            <h5 class="counter-head mb-0">Happy Client </h5>
+                            <h2 class="mb-0"><span class="counter-value" data-target="2"></span> Mil +</h2>
+                            <h5 class="counter-head mb-0">Tabelas/Planilhas Criadas</h5>
                         </div>
                     </div>
                 </div>
@@ -544,8 +630,8 @@
                 <div class="col-lg-3 col-6 my-3">
                     <div class="card counter-box border-0 shadow text-center rounded py-3">
                         <div class="card-body py-5">
-                            <h2 class="mb-0"><span class="counter-value" data-target="15">15</span> M </h2>
-                            <h5 class="counter-head mb-0">Download </h5>
+                            <h2 class="mb-0"><span class="counter-value" data-target="200">15</span> Mil Linhas</h2>
+                            <h5 class="counter-head mb-0">Médias por tabela </h5>
                         </div>
                     </div>
                 </div>
@@ -553,8 +639,8 @@
                 <div class="col-lg-3 col-6 my-3">
                     <div class="card counter-box border-0 shadow text-center rounded py-3">
                         <div class="card-body py-5">
-                            <h2 class="mb-0"><span class="counter-value" data-target="3261">3261</span> + </h2>
-                            <h5 class="counter-head mb-0">Happy Users </h5>
+                            <h2 class="mb-0"><span class="counter-value" data-target="4200">3261</span> + Horas</h2>
+                            <h5 class="counter-head mb-0">Programação </h5>
                         </div>
                     </div>
                 </div>
@@ -562,8 +648,8 @@
                 <div class="col-lg-3 col-6 my-3">
                     <div class="card counter-box border-0 shadow text-center rounded py-3">
                         <div class="card-body py-5">
-                            <h2 class="mb-0"><span class="counter-value" data-target="36">36</span> + </h2>
-                            <h5 class="counter-head mb-0">Years of expe. </h5>
+                            <h2 class="mb-0"><span class="counter-value" data-target="9">36</span> + </h2>
+                            <h5 class="counter-head mb-0">Anos de Experiência</h5>
                         </div>
                     </div>
                 </div>
@@ -586,7 +672,7 @@
                             <div class="col-12 text-center mb-3">
                                 <div class="container-title">
                                     <div class="titles">
-                                        <h4 class="title title-line text-capitalize mb-4">Work Expertise</h4>
+                                        <h4 class="title title-line text-capitalize mb-4">Expertises</h4>
                                     </div>
                                     <p class="text-light-muted mx-auto width-max mb-0">Obviously I'm a Web Designer.
                                         Experienced with all stages of the development cycle for dynamic web projects.
