--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
                         <div class="content mt-4">
                             <h5 class="title">Whats App</h5>
                             <p class="text-light-muted"></p>
-                            <a href="tel:11949959094" class="text-primary">(11) 949959094</a>
+                            <a href="https://api.whatsapp.com/send?phone=5511953276514&text=Oi%20Acabei%20de%20acessar%20o%20seu%20protif%C3%B3lio%20e%20achei%20muito%20interessante." class="text-primary">(11) 953276514</a>
                         </div>
                     </div>
                 </div>
