--- a/index.html
+++ b/index.html
@@ -155,9 +155,6 @@
                                                     class="text-black">Nacionalidade: </a> Brasileiro</p>
 
                                                     <br>
-
-                                            <a href="https://docs.google.com/document/d/1M36UKmGRu_q6wQhh_CnoS19mGuWymvnyBrd9nFJk4tI/edit?usp=sharing" 
-                                            class="btn btn-primary rounded text-white mb-2">Download do CV</a>
                                         </div>
                                         
                                     </div>
@@ -328,8 +325,7 @@
                                     </div>
                                     <h3 class="title mb-0">Analista de Suporte Técnico Jr - DELL</h3>
                                     <small class="company">Sitel do Brasil</small>
-                                    <span class="badge skill-badge education-badge margin-50 badge-light">2012 -
-                                        2015</span>
+                                    <span class="badge skill-badge education-badge margin-50 badge-light">2012 - 2014</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável por padronizar, análisar a programação dos sistemas de aplicação, acompanhando o desempenho dos recursos técnicos instalados. 
                                     </p>
@@ -347,7 +343,7 @@
                                     </div>
                                     <h3 class="title mb-0">Analista de BackOffice - DELL</h3>
                                     <small class="company">Sitel do Brasil</small>
-                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <span class="badge skill-badge education-badge badge-light">2014 - 2014</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável pela captura, análise e direcionamentos de casos complexos encaminhados por diversos canais de atendimento.
                                     </p>
@@ -370,7 +366,7 @@
                                     </div>
                                     <h3 class="title mb-0">Learning Specialist - CCE & Lenovo</h3>
                                     <small class="company">Sitel do Brasil</small>
-                                    <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <span class="badge skill-badge education-badge badge-light">2014 - 2016</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável por integrar e capacitar os membros do projeto a exercer as tarefas necessárias para o atendimento, independente do canal de atendimento. (FrontOffice, Backoffice, Chat, Suporte Técnico). 
                                         Além de ser responsável por identificar oportunidades de melhorias no processo e desenvolver plano de ação voltados para performance.
@@ -389,7 +385,7 @@
                                     </div>
                                     <h3 class="title mb-0">Learning Specialist - Philips Heath Care/Alpargatas</h3>
                                     <small class="company">Sitel do Brasil</small>
-                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <span class="badge skill-badge education-badge badge-light">2016 - 2017</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável por integrar e capacitar os membros do projeto a exercer as tarefas necessárias para o atendimento, independente do canal de atendimento. (FrontOffice, Backoffice, Chat, Suporte Técnico). 
                                         Além de ser responsável por identificar oportunidades de melhorias no processo e desenvolver plano de ação voltados para performance.
@@ -413,7 +409,7 @@
                                     </div>
                                     <h3 class="title mb-0">Quality/Process Specialist - Alpargatas</h3>
                                     <small class="company">Sitel do Brasil</small>
-                                    <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <span class="badge skill-badge education-badge badge-light">2017 - 2017</span>
                                     <p class="description text-light-muted mt-2">
                                         Além de monitorar a qualidade do atendimento, conforme o proposto pelo cliente e os padrões mais executados no mercado.
                                         Ser responsável pela documentação processual, para melhoria continua da performance e replicação de informação.
@@ -432,7 +428,7 @@
                                     </div>
                                     <h3 class="title mb-0">Learning Specialist</h3>
                                     <small class="company">GM Promo</small>
-                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <span class="badge skill-badge education-badge badge-light">2018 - 2018</span>
                                     <p class="description text-light-muted mt-2">
                                         Principal desafio foi desenvolver a área de treinamentos, criando e integrando as equipes para um processo mais sólido.
                                     </p>
@@ -455,7 +451,7 @@
                                     </div>
                                     <h3 class="title mb-0">PO - Product Owner</h3>
                                     <small class="company">GM Promo/Desenvolver</small>
-                                    <span class="badge skill-badge education-badge badge-light">2012 - 2010</span>
+                                    <span class="badge skill-badge education-badge badge-light">2018 - 2020</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável pela identificação de oportunidades do processo e organização de projetos que envolvessem pessoas, processo e sistemas. 
                                         Atuando diretamente com a equipe de desenvolvimento e atuando diretamente com o operacional para melhor aderencia aos processos criados.
@@ -474,7 +470,7 @@
                                     </div>
                                     <h3 class="title mb-0">Big Data</h3>
                                     <small class="company">GM Promo</small>
-                                    <span class="badge skill-badge education-badge badge-light">2009 - 2011</span>
+                                    <span class="badge skill-badge education-badge badge-light">2021 - 2021</span>
                                     <p class="description text-light-muted mt-2">
                                         Responsável pela criação e manutenção de bases sólidas de dados e criação e metodos de consulta mais inteligentes. Sempre visando obter a melhor performance na obtenção dos números para performance geral.
                                         E com isso sempre estando integrado aos times (Operacional, Financeiro, RH, DP, TI, Trade).
